--- a/WebApp/intime/templates/trackemployee/login.html
+++ b/WebApp/intime/templates/trackemployee/login.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset=utf-8" />
 <title>Login</title>
+<link type="text/css" rel="stylesheet" href="css/style.css" />
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 </head>
 <body>
 		<div id="header">
