static files not working

--- a/WebApp/intime/templates/trackemployee/index.html
+++ b/WebApp/intime/templates/trackemployee/index.html
@@ -1,10 +1,12 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8" />
+<meta charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 <title>Main</title>
 </head>
-<body>
+<body class="bodycl">
 		<div id="header">
 			name 
 			<form action="/index">
