--- a/WebApp/intime/templates/trackemployee/employee.html
+++ b/WebApp/intime/templates/trackemployee/employee.html
@@ -1,28 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8" />
-<title>Login</title>
+	<meta charset=utf-"8" />
+	<title>employee view</title>
+		<link type="text/css" rel="stylesheet" href="bootstrap/css/style.css" />
+		<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+		<link href="index.css" rel="stylesheet">
 </head>
 <body>
-		<div id="header">
-			name 
-			<form action="/index">
-				<button>Home</button>
-			</form>
-			<form action="/search/" method='POST'>{% csrf_token %}
-				<input name='query'></input>
-				<input type="submit" value="search"></input>
-			</form>
-		</div>
-		<div id="container">
+
+
+
+	  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">InTime</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/index">Home</a></li>
+          </ul>
+          <form class="navbar-form navbar-right" action="/search/" method='POST'>{% CSRF_TOKEN %} 
+            <input type="text" value="search" class="form-control" placeholder="Search...">
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+
+		<div class="containr-fluid">
+			
 			{% if employee %}
-			<ul>
-				<li>UID: {{ employee.uid }}</li> 
-				<li>Name: {{ employee.first_name }} {{ employee.last_name }}</li>
-				<li>Email: {{ employee.email }}</li>
-				<li>Phone: {{ employee.phone }}</li>
-			</ul>
+			<h2 class="sub-header">Employee Listing</h2>
+			<div class="table-responsive">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>catagory</th>
+							<th>value</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>UID:</th>
+							<th>{{ employee.uid }}</th>
+						</tr>
+						<tr>
+							<th>Name:</th>
+							<th>{{ employee.first_name }} {{ employee.last_name }}</th>
+						</tr>
+						<tr>
+							<th>Email:</th>
+							<th>{{ employee.email }}</th>
+						</tr>
+						<tr>
+							<th>Phone:</th>
+							<th>{{ employee.phone }}</th>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 			{% endif %}
 		</div>
+
+
+			
 </body>
