--- a/WebApp/intime/templates/trackemployee/login.html
+++ b/WebApp/intime/templates/trackemployee/login.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8" />
-<title>Login</title>
-<link type="text/css" rel="stylesheet" href="css/style.css" />
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+	<meta charset="utf-8" />
+	<title>Login</title>
+	<link type="text/css" rel="stylesheet" href="bootstrap/css/style.css" />
+	<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link href="login.css" rel="stylesheet">
 </head>
+
 <body>
-		<div id="header">
-			<h1>InTime</h1>
-		</div>
-		<div class="row" id="content">
-			<div id="login">
+
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">InTime</a>
+    	</div>
+	</nav>
+
+
+		<div class="container">
+
+		
+		<!--	
+
+		commenting out code for new account for the moment
+
+		<div id="login">
 				<div id="login_info">
 					Sign up for a new InTime Account
 					<p>Email Address</p>
@@ -20,19 +34,30 @@
 					<input type="password" name="sign_pwd"></input>
 				</div>
 				<button>Sign up</button>
-			</div>
-			<div id="login">
-				<form action="" method="post">{% csrf_token %}
+
+-->
+			
+			<!-- <div id="login"> -->
+
+				<form class="form-signin" role="form" action="" method="post">{% csrf_token %}
 					<div id="login_info">
-						Login to an existing InTime Account
-						<p>Email Address</p>
-						<input type="text" name="login_email"></input>
-						<p>Password</p>
-						<input type="password" name="login_pwd"></input>
+
+						<h2 class="form-signin-heading">Login to an existing InTime Account</h2>
+
+						<input type="username" class="form-control" placeholder="Email address" required autofocus> 
+
+						<input type="password" class="form-control" placeholder="Password" required>
+
 					</div>
-					{{ error }}
-					<button onclick=this.form.submit()>Login</button>
+					
+					<button class="btn btn-lg btn-primary btn-block"onclick=this.form.submit()>Login</button>
 				</form>
-			</div>
-		</div>
+
+
+
+			<!-- </div> -->
+		
+		</div>  <!-- This is the end div for the container -->
 </body>
+
+</html>
