--- a/WebApp/intime/templates/trackemployee/login.html
+++ b/WebApp/intime/templates/trackemployee/login.html
@@ -1,11 +1,12 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
 	<title>Login</title>
-	<link type="text/css" rel="stylesheet" href="bootstrap/css/style.css" />
-	<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" />
+	<link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"/>
+	<link type="text/css" href="{% static 'css/login.css' %}" rel="stylesheet"/>
 	<link href="login.css" rel="stylesheet">
 </head>
 
@@ -44,9 +45,9 @@
 
 						<h2 class="form-signin-heading">Login to an existing InTime Account</h2>
 
-						<input type="username" class="form-control" placeholder="Email address" required autofocus> 
+						<input name="username" type="username" class="form-control" placeholder="Email address" required autofocus> 
 
-						<input type="password" class="form-control" placeholder="Password" required>
+						<input name="password" type="password" class="form-control" placeholder="Password" required>
 
 					</div>
 					
