--- a/WebApp/intime/templates/trackemployee/login.html
+++ b/WebApp/intime/templates/trackemployee/login.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Login</title>
+	<!--Static exists in ../../intime/css-->
 	<link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" />
 	<link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"/>
 	<link type="text/css" href="{% static 'css/login.css' %}" rel="stylesheet"/>
