--- a/WebApp/intime/templates/trackemployee/search.html
+++ b/WebApp/intime/templates/trackemployee/search.html
@@ -1,8 +1,11 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8" />
-<title>Login</title>
+	<meta charset=utf-8" />
+	<title>Search</title>
+	<link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" />
+	<link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"/>
 </head>
 <body>
 		<div id="header">
