--- a/WebApp/intime/templates/trackemployee/employee.html
+++ b/WebApp/intime/templates/trackemployee/employee.html
@@ -1,16 +1,14 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
 <meta charset="utf-8" />
 <title>Login</title>
-=======
 	<meta charset=utf-"8" />
 	<title>employee view</title>
-		<link type="text/css" rel="stylesheet" href="bootstrap/css/style.css" />
-		<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-		<link href="index.css" rel="stylesheet">
->>>>>>> 4cf88cfe6657a9a7d88231768be14525d96bed80
+		<link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" />
+		<link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"/>
+		<link type="text/css" href="{% static "css/index.css" %}" rel="stylesheet">
 </head>
 <body>
 
@@ -31,7 +29,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/index">Home</a></li>
           </ul>
-          <form class="navbar-form navbar-right" action="/search/" method='POST'>{% CSRF_TOKEN %} 
+          <form class="navbar-form navbar-right" action="/search/" method='POST'>
             <input type="text" value="search" class="form-control" placeholder="Search...">
           </form>
         </div>
@@ -43,7 +41,6 @@
 		<div class="containr-fluid">
 			
 			{% if employee %}
-<<<<<<< HEAD
 			<ul>
 				<li>ID: {{ employee.user_id }}
 				<li>UID: {{ employee.uid }}</li> 
@@ -52,7 +49,6 @@
 				<li>Phone: {{ employee.phone }}</li>
 				<li>Present: {{ employee.present }}</li>	
 			</ul>
-=======
 			<h2 class="sub-header">Employee Listing</h2>
 			<div class="table-responsive">
 				<table class="table table-striped">
@@ -82,7 +78,6 @@
 					</tbody>
 				</table>
 			</div>
->>>>>>> 4cf88cfe6657a9a7d88231768be14525d96bed80
 			{% endif %}
 		</div>
 
